Bug#36097 - Be sure the highWater index is set to zero when a record is thawed. Thawing memsets the field offset vector to zero and only addes the first offset, to the beginning of the record.  Record::getEncodedValue must have a zero highWater offset so it will recalculate the offsets of the fields in that record.