storage/falcon/Table.cpp
@@ -1201,7 +1201,7 @@ void Table::updateIndexes(Transaction *transaction, RecordVersion *record, Recor
 **/
 void Table::insertIndexes(Transaction *transaction, RecordVersion *record)
 {
-    if (indexes)
+	if (indexes)
 		{
 		FOR_INDEXES(index, this);
 			Sync sync(&index->syncUnique, "Table::insertIndexes");
